derive/tests/snapshots/qualified_type_spellings/ArchivedNote/get_archived_note_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `ArchivedNote` from the `archived_note` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn get_archived_note_by_id<'a>(
        &'a self,
        id: impl Into<ArchivedNoteId> + Clone,
    ) -> Result<ArchivedNote, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().archived_note().id().find(id.clone().into().value()) {
            Some(archived_note) => Ok(archived_note),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "archived_note".into(),
                    column_names_and_row_values: format!(
                        "{{ id : {} }}", id.clone().into().value()
                    )
                        .into(),
                });
            }
        }
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `ArchivedNote` from the `archived_note` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn get_archived_note_by_id<'a>(
        &'a self,
        id: impl Into<ArchivedNoteId> + Clone,
    ) -> Result<ArchivedNote, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().archived_note().id().find(id.clone().into().value()) {
            Some(archived_note) => Ok(archived_note),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "archived_note".into(),
                    column_names_and_row_values: format!(
                        "{{ id : {} }}", id.clone().into().value()
                    )
                        .into(),
                });
            }
        }
    }
}
