derive/tests/snapshots/qualified_type_spellings/ArchivedNote/soft_delete_archived_note_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to soft-delete a `ArchivedNote` row in the `archived_note` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn soft_delete_archived_note_by_id<'a>(
        &'a self,
        id: impl Into<ArchivedNoteId> + Clone,
    ) -> Result<
        crate::spacetimedsl::delete::DeletionResult,
        crate::spacetimedsl::error::SpacetimeDSLError,
    > {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        use crate::spacetimedsl::itertools::Itertools;
        let id = id.clone().into().value();
        let row_to_delete = self.db().archived_note().id().find(id);
        let row_to_delete = match row_to_delete {
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "archived_note".into(),
                    column_names_and_row_values: format!("{{ id : {} }}", & id).into(),
                });
            }
            Some(row_to_delete) => row_to_delete,
        };
        if row_to_delete.deleted_at.is_some() {
            return Ok(crate::spacetimedsl::delete::DeletionResult {
                table_name: "archived_note".into(),
                one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
                entries: vec![],
                error_from_hook: None,
            });
        }
        let mut deletion_result_entry = crate::spacetimedsl::delete::DeletionResultEntry {
            table_name: "archived_note".into(),
            column_name: "id".into(),
            strategy: crate::spacetimedsl::delete::OnDeleteStrategy::SoftDelete,
            row_value: format!("{}", ArchivedNoteId::new(row_to_delete.id.clone()))
                .into(),
            child_entries: vec![],
        };
        let old_row = &row_to_delete;
        let mut new_row = old_row.clone();
        new_row
            .deleted_at = Some(
            self.ctx().timestamp().expect("a `WriteContext` always has a timestamp"),
        );
        self.db().archived_note().id().update(new_row);
        return Ok(crate::spacetimedsl::delete::DeletionResult {
            table_name: "archived_note".into(),
            one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
            entries: vec![deletion_result_entry],
            error_from_hook: None,
        });
    }
}
